--- a/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
@@ -76,6 +76,13 @@ pyroscope:
         requests:
           memory: 8Gi
           cpu: 1
+      readinessProbe:
+        # The store gateway can be configured to wait on startup for ring stability to be reached before it becomes
+        # ready. See the `store-gateway.sharding-ring.wait-stability-min-duration` server argument for more information.
+        #
+        # Depending on this flag and the number of tenants + blocks that need to be synced on startup, pods can take
+        # some time to become ready. This value can be used to ensure Kubernetes waits long enough and reduce errors.
+        initialDelaySeconds: 60
     tenant-settings:
       kind: Deployment
       replicaCount: 1
