Add support to set readinessProbe.initialDelaySeconds in Helm (#2865)
* Add support to override readinessProbe.initialDelaySeconds

* Add readiness probe config conditionally, set a default for store-gateway

* Update microservices values for ci tests

* Revert accidental change to go.work.sum

--- a/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
@@ -97,6 +97,9 @@ spec:
               path: /ready
               port: {{ $values.service.port_name }}
               scheme: {{ $values.service.scheme }}
+          {{- if and (hasKey $values "readinessProbe") (hasKey $values.readinessProbe "initialDelaySeconds") }}
+            initialDelaySeconds: {{ $values.readinessProbe.initialDelaySeconds }}
+          {{- end }}
           volumeMounts:
             - name: config
               mountPath: /etc/pyroscope/config.yaml
