--- a/operations/pyroscope/helm/pyroscope/templates/ingress.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/ingress.yaml
@@ -44,7 +44,7 @@ spec:
             port:
               number: {{ $.Values.pyroscope.service.port }}
         path: /querier.v1.QuerierService/
-        pathType: Prefix
+        pathType: ImplementationSpecific
       - backend:
           service:
             {{- if gt (len $.Values.pyroscope.components) 1}}
@@ -77,7 +77,7 @@ spec:
             port:
               number: {{ $.Values.pyroscope.service.port }}
         path: /push.v1.PusherService/
-        pathType: Prefix
+        pathType: ImplementationSpecific
       - backend:
           service:
             {{- if gt (len $.Values.pyroscope.components) 1}}
@@ -99,6 +99,6 @@ spec:
             port:
               number: {{ $.Values.pyroscope.service.port }}
         path: /settings.v1.SettingsService/
-        pathType: Prefix
+        pathType: ImplementationSpecific
   {{- end }}
 {{- end }}
