--- a/operations/pyroscope/helm/pyroscope/templates/servicemonitor.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/servicemonitor.yaml
@@ -29,8 +29,12 @@ spec:
     matchLabels:
       {{- include "pyroscope.selectorLabels" . | nindent 6 }}
       app.kubernetes.io/component: {{ $component | quote }}
-    {{- with $serviceMonitor.matchExpressions }}
     matchExpressions:
+      - key: prometheus.io/service-monitor
+        operator: NotIn
+        values:
+          - "false"
+    {{- with $serviceMonitor.matchExpressions }}
       {{- toYaml . | nindent 6 }}
     {{- end }}
   endpoints:
