docs(grafana-agent,ebpf): do not use undocumented features, used discovery.process

--- a/examples/ebpf/local/docker-compose.yml
+++ b/examples/ebpf/local/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - '4040:4040'
 
   app:
-    image: 'grafana/agent:latest'
+    image: 'grafana/agent:main'
     user: root
     privileged: true
     pid: 'host'
