--- a/examples/dotnet/rideshare/docker-compose.yml
+++ b/examples/dotnet/rideshare/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - REGION=us-east
       - PYROSCOPE_LABELS=region:us-east
       - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
-      - ASPNETCORE_URLS=http://*:5000
+      - RIDESHARE_LISTEN_PORT=5000
     build:
       context: .
 
@@ -25,7 +25,7 @@ services:
       - REGION=eu-north
       - PYROSCOPE_LABELS=region:eu-north
       - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
-      - ASPNETCORE_URLS=http://*:5000
+      - RIDESHARE_LISTEN_PORT=5000
 
     build:
       context: .
@@ -38,7 +38,7 @@ services:
       - REGION=ap-south
       - PYROSCOPE_LABELS=region:ap-south
       - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
-      - ASPNETCORE_URLS=http://*:5000
+      - RIDESHARE_LISTEN_PORT=5000
     build:
       context: .
 
@@ -50,7 +50,7 @@ services:
       - REGION=ap-south
       - PYROSCOPE_LABELS=region:ap-south-alpine
       - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
-      - ASPNETCORE_URLS=http://*:5000
+      - RIDESHARE_LISTEN_PORT=5000
     build:
       context: .
       dockerfile: musl.Dockerfile
