--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -89,24 +89,13 @@ jobs:
         run: make -C ./ebpf/testdata/qemu_img dist/pull
       - name: Start VM
         run: >
-          KVM_ARGS=""
-          ARCH=${{ matrix.arch }}
-          KERNEL=${{ matrix.kernel }}
-          INITRD=${{ matrix.initrd }}
-          make -C ./ebpf/testdata/qemu_img 
-          qemu/start_and_wait
+          KVM_ARGS="" ARCH=${{ matrix.arch }} KERNEL=${{ matrix.kernel }} INITRD=${{ matrix.initrd }} make -C ./ebpf/testdata/qemu_img qemu/start_and_wait
       - name: Copy test binary
         run: >
-          F=$(realpath ./ebpf/ebpf.${{ matrix.arch }}.test) 
-          make -C ./ebpf/testdata/qemu_img 
-          qemu/scp
+          F=$(realpath ./ebpf/ebpf.${{ matrix.arch }}.test) make -C ./ebpf/testdata/qemu_img qemu/scp
       - name: Uname
         run: >
-          CMD="uname -a"
-          make -C ./ebpf/testdata/qemu_img
-          qemu/exec
+          CMD="uname -a && apt update && docker ps -a && docker pull ubuntu:latest"  make -C ./ebpf/testdata/qemu_img qemu/exec
       - name: Exec test binary
         run: >
-          CMD=./ebpf.${{ matrix.arch }}.test
-          make -C ./ebpf/testdata/qemu_img
-          qemu/exec
+          CMD=./ebpf.${{ matrix.arch }}.test make -C ./ebpf/testdata/qemu_img qemu/exec
