--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -93,6 +93,8 @@ jobs:
       - name: Copy test binary
         run: >
           F=$(realpath ./ebpf/ebpf.${{ matrix.arch }}.test) make -C ./ebpf/testdata/qemu_img qemu/scp
+      - name: Setup tmate session for debugging
+        uses: mxschmitt/action-tmate@v3
       - name: Uname & tests
         run: >
           CMD="uname -a && sudo apt update && docker ps -a && docker pull korniltsev/ebpf-testdata-rideshare:3.8-slim"  make -C ./ebpf/testdata/qemu_img qemu/exec
