--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -19,7 +19,7 @@ concurrency:
 
 jobs:
   test_ebpf_amd64:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -30,47 +30,47 @@ jobs:
       - name: Test
         run: sudo make -C ./ebpf go/test/amd64
   test_ebpf_qemu:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - arch: amd64
-            kernel: amd64/boot/vmlinuz-4.19.0-26-amd64
-            initrd: amd64/boot/initrd.img-4.19.0-26-amd64
-          - arch: amd64
-            kernel: amd64/boot/vmlinuz-5.10.0-28-amd64
-            initrd: amd64/boot/initrd.img-5.10.0-28-amd64
-          - arch: amd64
-            kernel: amd64/boot/vmlinuz-5.15.0-94-generic
-            initrd: amd64/boot/initrd.img-5.15.0-94-generic
-          - arch: amd64
-            kernel: amd64/boot/vmlinuz-5.4.0-150-generic
-            initrd: amd64/boot/initrd.img-5.4.0-150-generic
-          - arch: amd64
-            kernel: amd64/boot/vmlinuz-6.1.0-18-amd64
-            initrd: amd64/boot/initrd.img-6.1.0-18-amd64
+#          - arch: amd64
+#            kernel: amd64/boot/vmlinuz-4.19.0-26-amd64
+#            initrd: amd64/boot/initrd.img-4.19.0-26-amd64
+#          - arch: amd64
+#            kernel: amd64/boot/vmlinuz-5.10.0-28-amd64
+#            initrd: amd64/boot/initrd.img-5.10.0-28-amd64
+#          - arch: amd64
+#            kernel: amd64/boot/vmlinuz-5.15.0-94-generic
+#            initrd: amd64/boot/initrd.img-5.15.0-94-generic
+#          - arch: amd64
+#            kernel: amd64/boot/vmlinuz-5.4.0-150-generic
+#            initrd: amd64/boot/initrd.img-5.4.0-150-generic
+#          - arch: amd64
+#            kernel: amd64/boot/vmlinuz-6.1.0-18-amd64
+#            initrd: amd64/boot/initrd.img-6.1.0-18-amd64
           - arch: amd64
             kernel: amd64/boot_extra/vmlinuz-5.10.205-195.807.amzn2.x86_64
             initrd: amd64/boot_extra/initramfs-5.10.205-195.807.amzn2.x86_64.img
 
-          - arch: arm64
-            kernel: arm64/boot/vmlinuz-4.19.0-26-arm64
-            initrd: arm64/boot/initrd.img-4.19.0-26-arm64
-          - arch: arm64
-            kernel: arm64/boot/vmlinuz-5.10.0-28-arm64
-            initrd: arm64/boot/initrd.img-5.10.0-28-arm64
-          - arch: arm64
-            kernel: arm64/boot/vmlinuz-5.15.0-94-generic
-            initrd: arm64/boot/initrd.img-5.15.0-94-generic
-          - arch: arm64
-            kernel: arm64/boot/vmlinuz-5.4.0-150-generic
-            initrd: arm64/boot/initrd.img-5.4.0-150-generic
-          - arch: arm64
-            kernel: arm64/boot/vmlinuz-6.1.0-18-arm64
-            initrd: arm64/boot/initrd.img-6.1.0-18-arm64
-          - arch: arm64
-            kernel: arm64/boot_extra/vmlinuz-5.10.205-195.807.amzn2.aarch64
-            initrd: arm64/boot_extra/initramfs-5.10.205-195.807.amzn2.aarch64.img
+#          - arch: arm64
+#            kernel: arm64/boot/vmlinuz-4.19.0-26-arm64
+#            initrd: arm64/boot/initrd.img-4.19.0-26-arm64
+#          - arch: arm64
+#            kernel: arm64/boot/vmlinuz-5.10.0-28-arm64
+#            initrd: arm64/boot/initrd.img-5.10.0-28-arm64
+#          - arch: arm64
+#            kernel: arm64/boot/vmlinuz-5.15.0-94-generic
+#            initrd: arm64/boot/initrd.img-5.15.0-94-generic
+#          - arch: arm64
+#            kernel: arm64/boot/vmlinuz-5.4.0-150-generic
+#            initrd: arm64/boot/initrd.img-5.4.0-150-generic
+#          - arch: arm64
+#            kernel: arm64/boot/vmlinuz-6.1.0-18-arm64
+#            initrd: arm64/boot/initrd.img-6.1.0-18-arm64
+#          - arch: arm64
+#            kernel: arm64/boot_extra/vmlinuz-5.10.205-195.807.amzn2.aarch64
+#            initrd: arm64/boot_extra/initramfs-5.10.205-195.807.amzn2.aarch64.img
 
     steps:
       - name: Checkout code with submodule
