--- a/.github/workflows/test_ebpf.yml
+++ b/.github/workflows/test_ebpf.yml
@@ -19,8 +19,8 @@ concurrency:
 
 jobs:
   test_ebpf_amd64:
-    name: Test eBPF on amd64 bare-metal
-    runs-on: ubuntu-latest
+    name: on Bare-metal amd64
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,8 +31,8 @@ jobs:
       - name: Test
         run: sudo make -C ./ebpf go/test/amd64
   test_ebpf_qemu:
-    name: Test eBPF on QEMU
-    runs-on: ubuntu-latest
+    name: on QEMU
+    runs-on: ubuntu-latest-16-cores
     strategy:
       matrix:
         include:
