--- a/examples/language-sdk-instrumentation/nodejs/express/Dockerfile
+++ b/examples/language-sdk-instrumentation/nodejs/express/Dockerfile
@@ -2,8 +2,8 @@ FROM node:latest
 
 WORKDIR /app
 
-COPY package.json .
-RUN npm install
+COPY package.json yarn.lock .
+RUN yarn install
 COPY index.js .
 
 ENV DEBUG=pyroscope
