--- a/examples/language-sdk-instrumentation/nodejs/express-pull/docker-compose.yml
+++ b/examples/language-sdk-instrumentation/nodejs/express-pull/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   agent:
     image: grafana/agent:latest
     volumes:
-      - ./agent.config.river:/etc/agent-config/config.river
+      - ./agent.config.river:/etc/agent-config/config.river:ro
     command:
       - run
       - /etc/agent-config/config.river
