--- a/examples/language-sdk-instrumentation/nodejs/express/package.json
+++ b/examples/language-sdk-instrumentation/nodejs/express/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@pyroscope/nodejs": "^0.2.x",
     "express": "^4.17.3",
-    "morgan": "^1.10.0",
-    "pprof": "^3.2.0"
+    "morgan": "^1.10.0"
   },
   "resolutions": {
     "protobufjs": "^7.2.4"
