Revert "fix: disable vt proto pools (#3034)"
This reverts commit c1ccb5083d26cb11c3cce77d8373c3ee855ea58c.

--- a/api/buf.gen.yaml
+++ b/api/buf.gen.yaml
@@ -15,7 +15,8 @@ plugins:
     out: gen/proto/go
     opt:
       - paths=source_relative
-      - features=marshal+unmarshal+size+grpc+clone+equal
+      - features=marshal+unmarshal+size+pool+grpc+pool+clone+equal
+      - pool=github.com/grafana/pyroscope/api/gen/proto/go/google/v1.Profile
 
   - name: connect-go
     out: gen/proto/go
