chore: remove repetitive words
Signed-off-by: sunxunle <sunxunle@gmail.com>

--- a/examples/tracing/tempo/tempo/tempo.yml
+++ b/examples/tracing/tempo/tempo/tempo.yml
@@ -34,6 +34,6 @@ storage:
   trace:
     backend: local                     # backend configuration to use
     wal:
-      path: /tmp/tempo/wal             # where to store the the wal locally
+      path: /tmp/tempo/wal             # where to store the wal locally
     local:
       path: /tmp/tempo/blocks
