fix: remove redundant tag override that was not updated to 1.5.0

--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -13,7 +13,7 @@ pyroscope:
     repository: grafana/pyroscope
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "1.4.0"
+    tag: ""
 
   extraArgs:
     log.level: debug
